crates/test-files/fixtures/compile_errors/call_to_mem_on_primitive.fe
contract Foo {
    bar: u256

    fn call_me(self) -> u256 {
        return self.bar.to_mem()
    }
}
